k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: demoservice-deployment
    labels:
        app: demo-service
spec:
    replicas: 2
    selector: 
      matchLabels:
        app: demo-service
    template:
      metadata:
        labels:
          app: demo-service
      spec:
        containers:
        - name: demo-service
          image: deepborah/demoservice:latest
          ports:
          - containerPort: 8000
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 500m
              memory: 500Mi   
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
