k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: demo-service
spec:
  type: NodePort
  selector:
    app: demo-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
